# pixiv_api_rust

./: Cargo.toml  README.md
resources/: comments.json  error.json  illust.json  illust_series.json  illust_series_detail.json  novel.json  novel_series.json  novel_text.json  user.json
src/: client.rs  error.rs  illust.rs  lib.rs  novel.rs  preload.rs  traits.rs  user.rs  utils.rs
