[package]
name = "pixiv_api"
version = "0.1.0"
edition = "2021"
author = "yinpeach"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.162", features = ["derive"]}
serde_json = "1.0.96"
reqwest = {version = "0.11", features = ["blocking", "json", "socks"]}
tokio = "1.28.0"
chrono = "0.4.24"
lazy_static = "1.4.0"
